# TressFX-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/sintel_lite_v2_1/: GEO-sintel_hair_emit.001-sintel_hair.tfx  tfx_exporter.py
cmake/: Config.cmake  Utils.cmake
cmake/Modules/: FindGLAD.cmake  FindGLM.cmake  FindSDL2.cmake
include/: pch.hpp
include/gl-utils/: VAO.hpp  buffer.hpp  main.hpp  pch.hpp  sync.hpp  uniform.types.hpp  window.hpp
include/gl-utils/draw/: blend.hpp  depth.hpp  parameters.hpp  stencil.hpp
include/gl-utils/shader/: introspect.hpp  shader.hpp
include/gl-utils/texture/: TextureOpts.hpp  texture.hpp
include/logging/: Logger.hpp
libs/amd_tressfx/include/: AMD_Types.h  TressFXHairObject.h  TressFXSDFCollision.h
libs/amd_tressfx/src/: Readme.md  TressFXAsset.cpp  TressFXHairObject.cpp  TressFXLayouts.cpp  TressFXSimulation.cpp
libs/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/: State.hpp  camera_ortho.impl.hpp  gui.impl.hpp  main.cpp  scene.impl.hpp  scene_load.impl.hpp  utils.impl.hpp
src/gl-tfx/: TFxHairStrands.cpp  TFxHairStrands.hpp  TFxPPLL.cpp  TFxPPLL.hpp  TFxSample.cpp  TFxSample.hpp  TFxSettings.hpp  TFxSimulation.cpp  TFxSimulation.hpp  include_TFx_pls_no_warnings.hpp  print_me.cpp  print_me.hpp
src/gl-tfx/GpuInterface/: TFxGpuInterface.cpp  TFxGpuInterface.hpp  barriers.impl.hpp  bindSet.impl.hpp  buffer.impl.hpp  compute.impl.hpp  draw.impl.hpp  fileIO.impl.hpp  layout.impl.hpp  structuredBuffers.impl.hpp  textures.impl.hpp
src/gl-utils/: debug_callback.impl.hpp  main.cpp  setShaderBuffer.impl.hpp  uniforms.impl.hpp  vao.impl.hpp  window.impl.hpp
src/gl-utils/buffer/: buffer.impl.hpp  copy_to.impl.hpp  malloc.impl.hpp  read.impl.hpp  write.impl.hpp
src/gl-utils/draw/: apply_parameters.impl.hpp
src/gl-utils/shader/: compile.impl.hpp  introspect.impl.hpp  shader.impl.hpp
src/gl-utils/texture/: allocate_texture.impl.hpp  apply_texture_options.impl.hpp
src/logging/: Logging.cpp  formatter.impl.hpp
src/shaders/: _fullscreen_pass.glsl  bg.frag.glsl  bg.vert.glsl  capsule_debug.frag.glsl  capsule_debug.vert.glsl  simple_obj.frag.glsl  simple_obj.vert.glsl  wind.frag.glsl  wind.vert.glsl
src/shaders/gl-tfx/: _iLighting.glsl  _utils.glsl  ppll_build.frag.glsl  ppll_build.vert.glsl  ppll_resolve.frag.glsl  ppll_resolve.vert.glsl  sim0_IntegrationAndGlobalShapeConstraints.comp.glsl  sim1_VelocityShockPropagation.comp.glsl  sim2_LocalShapeConstraints.comp.glsl  sim3_LengthConstraintsWindAndCollision.comp.glsl  sim4_UpdateFollowHairVertices.comp.glsl
src/shaders/gl-tfx/lib/: TressFXPPLL.build.glsl  TressFXPPLL.glsl  TressFXPPLL.resolve.glsl  TressFXRendering.coverage.glsl  TressFXRendering.glsl  TressFXRendering.shading.glsl  TressFXStrands.glsl
src/shaders/gl-tfx/sim/: _SimBuffers.comp.glsl  _SimCapsuleCollision.comp.glsl  _SimCommon.comp.glsl  _SimParams.comp.glsl  _SimParams.mock.comp.glsl  _SimQuat.comp.glsl
src/shaders/perf_test/: frag.glsl  vert.glsl
